fix text overflow

--- a/src/styles/MovieDetail.scss
+++ b/src/styles/MovieDetail.scss
@@ -6,17 +6,18 @@
     width: 100%;
     height: 100%;
     position: relative;
-    overflow: hidden;
+    // overflow: hidden;
     // margin-bottom: 30px;
 }
   
 .detail__contents {
     position: absolute;
     height: 80%;
-    width: 54rem;
+    width: 60rem;
     left: 12rem;
     top: 9rem;
     z-index: 1;
+    // overflow: scroll;
 }
 h1 {
     -webkit-text-stroke: 0.5px rgb(36, 36, 36); /* width and color */
